--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,17 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
-
-    <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:drawable="@android:color/holo_green_dark"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@android:color/Mycolor" />
 
     <!-- You can insert your own image assets here -->
-
     <item>
-
-    <bitmap android:src="@drawable/image144" android:gravity="center"/>
-
-</item>
-
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/image144" />
+    </item>
 </layer-list>
